fixed navbar z-index

--- a/src/components/CompassNavbar/CompassNavbar.css
+++ b/src/components/CompassNavbar/CompassNavbar.css
@@ -12,6 +12,7 @@
   right: 30px;
   width: 120px;
   height: 120px;
+  z-index: 9999;
 }
 
 /* Compass Button */
